# LEX

./: .gitignore  CMakeLists.txt  NOTICE  README.md  configuration.md
cmake/: lexConfig.cmake.in  uninstall.cmake.in
docs/: configs.md
resources/: README.md  bundler.c
resources/syntax/: javascript.json  markdown.json  ruby.json  shell.json
resources/themes/: One.Dark.Pro  dracula.Theme
src/: editor.c  editor.h  utils.c
